tests/errors/continue_outside_control_flow.dang
# continue is only valid inside a loop or block argument
continue
